--- a/settings.gradle
+++ b/settings.gradle
@@ -17,8 +17,7 @@ pluginManagement {
 }
 
 plugins {
-    id 'com.diffplug.blowdryerSetup' version '1.6.0'
-    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.4.0' // Provides java toolchains
+    id 'com.gtnewhorizons.gtnhsettingsconvention' version '1.0.22'
 }
 
 blowdryerSetup {
