--- a/settings.gradle
+++ b/settings.gradle
@@ -4,10 +4,10 @@ pluginManagement {
         maven {
             // RetroFuturaGradle
             name "GTNH Maven"
-            url "http://jenkins.usrv.eu:8081/nexus/content/groups/public/"
-            allowInsecureProtocol = true
+            url "https://nexus.gtnewhorizons.com/repository/public/"
             mavenContent {
-                includeGroup("com.gtnewhorizons.retrofuturagradle")
+                includeGroup("com.gtnewhorizons")
+                includeGroupByRegex("com\\.gtnewhorizons\\..+")
             }
         }
         gradlePluginPortal()
@@ -20,8 +20,4 @@ plugins {
     id 'com.gtnewhorizons.gtnhsettingsconvention' version '1.0.30'
 }
 
-blowdryerSetup {
-    repoSubfolder 'gtnhShared'
-    github('GTNewHorizons/ExampleMod1.7.10', 'tag', '0.2.0')
-    //devLocal '.' // Use this when testing config updates locally
-}
+
