--- a/.editorconfig
+++ b/.editorconfig
@@ -15,5 +15,8 @@ trim_trailing_whitespace = true
 [*.{bat,ini}]
 end_of_line = crlf
 
-[*.{dtd,json,mcmeta,md,sh,svg,xml,xsd,xsl,yaml,yml}]
+[*.{dtd,json,info,mcmeta,md,sh,svg,xml,xsd,xsl,yaml,yml}]
 indent_size = 2
+
+[*.lang]
+trim_trailing_whitespace = false
